@@ -46,6 +46,6 @@ int main() {
     ket psi_in = U * 0_ket;
     ket psi_out = engine.get_psi();
     std::cout << ">> Teleported state:\n";
-    std::cout << disp(psi_out) << '\n';
+    std::cout << disp(dirac(psi_out)) << '\n';
     std::cout << ">> Norm difference: " << norm(psi_out - psi_in) << '\n';
 }
