@@ -12,6 +12,6 @@ int main() {
     std::cout << disp(0_ket) << '\n';
 
     std::cout << "This is some random ket in Dirac notation\n";
-    std::cout << disp(dirac(randket(2)), IOManipDiracOpts{}.set_plus_op(" + "))
-              << '\n';
+    std::cout << disp(dirac(randket(2)), IOManipDiracOpts{}.set_plus_op(" + "));
+    std::cout << std::endl;
 }
